[package]
name = "bevy-suis"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["xr"]
xr = []

[dependencies]
bevy = { version = "0.17.0-dev", git = "https://github.com/bevyengine/bevy.git", features = ["track_location"] }
bevy_mod_xr = {git = "https://github.com/MiniMinerX/bevy_oxr", branch = "dev-0.17"}
schminput = { git = "https://github.com/MiniMinerX/Schminput", branch = "dev-0.17", features = ["xr"] }

[dev-dependencies]
bevy_mod_openxr = {git = "https://github.com/MiniMinerX/bevy_oxr", branch = "dev-0.17"}
openxr = "0.19"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[workspace]
members = ["bevy-suis-explicit-method-data"]
