[package]
name = "bevy-suis-explicit-method-data"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.0-dev", git = "https://github.com/bevyengine/bevy.git" }
schminput = { git = "https://github.com/MiniMinerX/Schminput", branch = "dev-0.17", features = [
	"xr",
] }
bevy-suis.path = ".."
