[package]
name = "bevy-suis"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bevy = { version = "0.15", default-features = false }
# bevy_mod_xr = { git = "https://github.com/awtterpip/bevy_oxr" }
bevy_mod_xr = { git = "https://github.com/Schmarni-Dev/bevy_openxr.git", branch = "0.15rc"}

#schminput = { git = "https://github.com/Schmarni-Dev/schminput", features = [
#	"xr",
#], rev = "42a572a"}
schminput = { git = "https://github.com/MiniMinerX/schminput", features = [
	"xr",
], branch = "dev-bevy-0.15"}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# bevy_mod_openxr = { git = "https://github.com/awtterpip/bevy_oxr" }
bevy_mod_openxr = { git = "https://github.com/Schmarni-Dev/bevy_openxr.git", branch = "0.15rc"}

openxr = { version = "0.19.0", default-features = false }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
